# easyexif

./: MANIFEST.in  easyexif.bat  easyexif.py  readme.md  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
