[metadata]
name = easyexif
version = 0.0.1
author = Nadav Kehati
author_email = nadav@nadalia.com
description = Easily edit EXIF dates
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NadavK/easyexif
project_urls =
    Bug Tracker = https://github.com/NadavK/easyexif/issues
classifiers =
    Programming Language :: Python :: 3
	License :: OSI Approved :: GNU Affero General Public License v3
	Operating System :: Microsoft :: Windows
	Operating System :: Microsoft :: Windows :: Windows 10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src